--- a/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
+++ b/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
@@ -4,4 +4,10 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Label="NuGet">
+    <Version>0.9.0</Version>
+    <Description></Description>
+    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+  </PropertyGroup>
+
 </Project>
