--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="Nuget">
-    <None Include="$(SolutionDir)\docs\nuget_icon.png">
+    <None Include="$(SolutionDir)assets\nuget_icon.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
