--- a/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
+++ b/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
@@ -8,6 +8,7 @@
     <Version>0.9.0</Version>
     <Description>$PROJECT_DESCRIPTION$</Description>
     <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+    <PackageTags></PackageTags>
   </PropertyGroup>
 
 </Project>
