--- a/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
+++ b/src/libs/$PROJECT_NAME$/$PROJECT_NAME$.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <Version>0.9.0</Version>
+    <Version>1.0.0</Version>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <Description>$PROJECT_DESCRIPTION$</Description>
-    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup>
 
