feat: Added dotnet.yml and IntegrationTests project to solution.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,10 +26,10 @@ jobs:
       run: dotnet clean --configuration Release && dotnet nuget locals all --clear
     
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release --nologo
     
     - name: Run tests
-      run: dotnet test --configuration Release
+      run: dotnet test --configuration Release --nologo
         
     - name: Publish
       run: dotnet nuget push
